--- a/css/styles.css
+++ b/css/styles.css
@@ -370,14 +370,61 @@ header {
   margin-right: 0;
 }
 
+.shop-item figcuption {
+  display: block;
+  padding: 14px 30px 0 14px;
+}
+
+.shop-item {
+  font-size: 14px;
+  font-weight: 900;
+  font-style: italic;
+  text-transform: uppercase;
+  color: #333333;
+}
+
+.shop-price {
+  font-size: 18px;
+  text-align: right;
+}
+
+.shop-price::before {
+  font: normal normal normal 16px/1 FontAwesome;
+  content: "\f153.";
+}
+
+.shop-old-price {
+  font-size: 14px;
+  font-weight: 900;
+  color: #e24602;
+  text-decoration: line-through;
+}
+
+.shop-old-price::before {
+  font-size: 14px;
+}
+
 /*footer*/
 .footer-top-social li {
   float: left;
   width: 390px;
-  height: 150px;
   text-align: center;
   background: #3b5997;
   margin: auto;
+}
+
+.footer-top-social a {
+  font-size: 66px;
+  color: #fff;
+  display: block;
+  padding: 42px 0;
+}
+
+.footer-top-social .fa-twitter {
+  background: #3fccfd;
+}
+.footer-top-social .fa-pinterest-p {
+  background: #cb2027;
 }
 
 .info-footer {
